--- a/index.html
+++ b/index.html
@@ -5,7 +5,26 @@
 </head>
 <body>
 <script data-main="src/main" src="lib/requirejs/require.js"></script>
-<p>
+    <h1>On guard</h1>
+    <p>Change the settings below to change how your driller will call</p>
+    <form id="onGuardControlPanel" style="float:left;width:50%;">
+        <label for="minTime">Minimum time between calls</label>
+        <input type="number" id="minTime" min="0.5" max="5"><br>
+        <label for="maxTime">Maximum time between calls</label>
+        <input type="number" id="maxTime" min="1" max="20" ><br>
+        <label for="areaWidth">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
+        <input type="number" id="areaWidth" min="-1" max="10" data-restart="true" ><br>
+        <label for="areaLength">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
+        <input type="number" id="areaLength" min="-1" max="10" data-restart="true" ><br>
+        <label for="stepCount">Maximum number of steps (Set to -1 for no limit)</label>
+        <input type="number" id="stepCount" min="-1" data-restart="true"><br>
+        <input type="button" id="start" value="Start"><br>
+        <input type="button" id="stop" value="Stop"><br>
+    </form>
+    <div id="visualiser" style="float:left;width:50%;">
+
+    </div>
+        <p style="clear:both">
     <br>// bursts (repeat and random, and inbetween)
     <br>// gradual speed up
     <br>// available room (or infinite)
@@ -14,6 +33,7 @@
     <br>// find a way of giving steps weight
     <br>// publish the event emitter
     <br>// easily enable and disable steps (and change frequency)
+    <br>write tests for setting conf on the fly
 </p>
 </body>
 </html>
