decoupled the control panel into a more independednt module

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <p style="clear:both">
     <br>// bursts (repeat and random, and inbetween)
     <br>// gradual speed up
-    <br>// available room (or infinite)
     <br>// use the accelerometer to measure success
-    <br>// use an event aggregator
-    <br>// find a way of giving steps weight
     <br>// publish the event emitter
     <br>// easily enable and disable steps (and change frequency)
     <br>write tests for setting conf on the fly
+    <br>weight more heavily towards step and back
+    <br>infinite visualisation
+    <br> odd shaped areas
 </p>
 </body>
 </html>
