decoupled the control panel into a more independednt module

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <label for="maxTime">Maximum time between calls</label>
         <input type="number" id="maxTime" min="1" max="20" ><br>
         <label for="areaWidth">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
-        <input type="number" id="areaWidth" min="-1" max="10" data-restart="true" ><br>
+        <input type="number" id="areaWidth" min="-1" max="10" ><br>
         <label for="areaLength">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
-        <input type="number" id="areaLength" min="-1" max="10" data-restart="true" ><br>
+        <input type="number" id="areaLength" min="-1" max="10" ><br>
         <label for="stepCount">Maximum number of steps (Set to -1 for no limit)</label>
-        <input type="number" id="stepCount" min="-1" data-restart="true"><br>
+        <input type="number" id="stepCount" min="-1"><br>
         <input type="button" id="start" value="Start"><br>
         <input type="button" id="stop" value="Stop"><br>
     </form>
