--- a/index.html
+++ b/index.html
@@ -7,33 +7,42 @@
 <script data-main="src/main" src="lib/requirejs/require.js"></script>
     <h1>On guard</h1>
     <p>Change the settings below to change how your driller will call</p>
-    <form id="onGuardControlPanel" style="float:left;width:50%;">
-        <label for="minTime">Minimum time between calls</label>
-        <input type="number" id="minTime" min="0.5" max="5"><br>
-        <label for="maxTime">Maximum time between calls</label>
-        <input type="number" id="maxTime" min="1" max="20" ><br>
-        <label for="areaWidth">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
-        <input type="number" id="areaWidth" min="-1" max="10" ><br>
-        <label for="areaLength">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
-        <input type="number" id="areaLength" min="-1" max="10" ><br>
-        <label for="stepCount">Maximum number of steps (Set to -1 for no limit)</label>
-        <input type="number" id="stepCount" min="-1"><br>
-        <input type="button" id="start" value="Start"><br>
-        <input type="button" id="stop" value="Stop"><br>
+    <form id="onGuardControlPanel" style="float:left;width:33%;">
+        <fieldset>
+            <label for="minTime">Minimum time between calls</label>
+            <input type="number" id="minTime" min="0.5" max="5"><br>
+            <label for="maxTime">Maximum time between calls</label>
+            <input type="number" id="maxTime" min="1" max="20" ><br>
+            <label for="areaWidth">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
+            <input type="number" id="areaWidth" min="-1" max="10" ><br>
+            <label for="areaLength">Area width (measured in Tai Chi steps. Set to -1 for no limit)</label>
+            <input type="number" id="areaLength" min="-1" max="10" ><br>
+            <label for="stepCount">Maximum number of steps (Set to -1 for no limit)</label>
+            <input type="number" id="stepCount" min="-1"><br>
+            <input type="button" id="start" value="Start"><br>
+            <input type="button" id="stop" value="Stop"><br>
+        </fieldset>
+        <fieldset id="stepSelector">
+        </fieldset>
     </form>
-    <div id="visualiser" style="float:left;width:50%;">
+    <div id="visualiser" style="float:left;width:33%;">
 
     </div>
-        <p style="clear:both">
-    <br>// bursts (repeat and random, and inbetween)
-    <br>// gradual speed up
-    <br>// use the accelerometer to measure success
-    <br>// publish the event emitter
-    <br>// easily enable and disable steps (and change frequency)
-    <br>write tests for setting conf on the fly
-    <br>weight more heavily towards step and back
-    <br>infinite visualisation
-    <br> odd shaped areas
-</p>
+        <div style="float:left;width:33%;">
+            <h2>To do list</h2>
+            <p>
+                <br>// bursts (repeat and random, and inbetween)
+                <br>// gradual speed up
+                <br>// use the accelerometer to measure success
+                <br>// publish the event emitter
+                <br>// easily enable and disable steps (and change frequency)
+                <br>write tests for setting conf on the fly
+                <br>weight more heavily towards step and back
+                <br>infinite visualisation
+                <br> odd shaped areas
+                <br> add 'all' to event emitter
+                <br> design and skinning
+                <br> option to delay start (default to 2s)
+            </p>
 </body>
 </html>
