--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="number" id="stepCount" min="-1">
         </fieldset>
         <fieldset>
-            <input type="button" id="start" value="Start">
+            <input type="button" id="resetAndStart" value="Start">
             <input type="button" id="stop" value="Stop">
         </fieldset>
         
