added support for radio and checkboxes in control panel

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 <br> get driller coverage to 100%
                 <br> write tests for tai chi config
                 <br> preserve position on stop option
+                <br> automate control panel creation
+                <br> build
+                <br> If not supported show message explining which browers are
             </p>
 </body>
 </html>
