pre drawing of grid in simple visualiser

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 <script data-main="src/main" src="lib/requirejs/require.js"></script>
     <h1>On guard</h1>
-    <p>Change the settings below to change how your driller will call</p>
+    <p>Change the settings below to change how your driller will call.<br>
+        To avoid walking into a wall you'll need to start one step forward from the bottom left corner of the room</p>
     <form id="onGuardControlPanel" style="float:left;width:33%;">
         <fieldset id="disabledSteps">
         </fieldset>
