--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script data-main="src/main" src="lib/requirejs/require.js"></script>
-    <h1>On guard tai chi martial workout</h1>
+    <h1><em>On guard</em> tai chi martial workout</h1>
     <p>This app calls out tai chi martial commands to help improve your coordination.</p>
     <p>The app takes account of the space you have to move around. To avoid walking into a wall start one tai chi step forward from the left corner of the room</p>
     <p>Change the settings below to customise how the commands will be called.</p>
