--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0, minimum-scale=1, maximum-scale=1">
     <title>On guard tai chi martial workout</title>
     <link rel="stylesheet" href="styles/css/main.css" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet" type="text/css">
