--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="http://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet" type="text/css">
 </head>
 <body>
-<script data-main="src/main" src="lib/requirejs/require.js"></script>
+
     <h1><em>On guard</em> tai chi martial workout</h1>
     <p>This app calls out tai chi martial commands to help improve your coordination.</p>
     <p>The app takes account of the space you have to move around. To avoid walking into a wall start one tai chi step forward from the left corner of the room</p>
@@ -49,5 +49,6 @@
 
         </div>
     </div>
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
